--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <div class="empty">
             <div class="fill" draggable="true"></div>
         </div>
-        <div class="empty"></div>
+        <div class="empty">
+            <div class="fill" draggable="true"></div>
+        </div>
         <div class="empty"></div>
         <div class="empty"></div>
         <div class="empty"></div>
