--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1 class="heading">intera6_drag</h1>
-    <a href="/_static/dist/index.html">test</a>
+    <a href="_static/dist/index.html">test</a>
+    <a href="_static/src/index.html">test</a>
     <div class="container">
         <div class="empty">
             <div class="fill" draggable="true"></div>
