--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>intera6_drag</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/_static/dist/css/style.css">
 </head>
 <body>
     <h1 class="heading">intera6_drag</h1>
@@ -12,6 +12,7 @@
     <a href="_static/src/index.html">test</a>
     <div class="container">
         <div class="empty">
+            <!-- enum型は列挙型 -->
             <div class="fill" draggable="true"></div>
         </div>
         <div class="empty">
