--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>intera6_drag</title>
-    <link rel="stylesheet" href="/_static/dist/css/style.css">
+    <link rel="stylesheet" href="https://github.com/sisen-rayu/intera6_drag/blob/master/_static/dist/css/style.css">
 </head>
 <body>
     <h1 class="heading">intera6_drag</h1>
-    <a href="_static/dist/index.html">test</a>
+    <a href="https://github.com/sisen-rayu/intera6_drag/blob/master/_static/dist/index.html">test</a>
     <a href="_static/src/index.html">test</a>
     <div class="container">
         <div class="empty">
