--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <base href="{{site.github.url}}" charset="utf-8"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>intera6_drag</title>
-    <link rel="stylesheet" href="https://github.com/sisen-rayu/intera6_drag/_static/dist/css/style.css">
+    <link rel="stylesheet" href="https://sisen-rayu.github.io/intera6_drag/_static/dist/css/style.css">
+    <link rel="stylesheet" href="_static/dist/css/style.css">
 </head>
 <body>
     <h1 class="heading">intera6_drag</h1>
