--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>intera6_drag</title>
     <link rel="stylesheet" href="https://sisen-rayu.github.io/intera6_drag/_static/dist/css/style.css">
     <link rel="stylesheet" href="_static/dist/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1 class="heading">intera6_drag</h1>
