--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
             <!-- enum型は列挙型 -->
             <div class="fill" draggable="true"></div>
         </div>
-        <div class="empty">
-            <div class="fill" draggable="true"></div>
-        </div>
+        <div class="empty"></div>
         <div class="empty"></div>
         <div class="empty"></div>
         <div class="empty"></div>
